--- a/app/src/main/res/layout/fragment_password.xml
+++ b/app/src/main/res/layout/fragment_password.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="viewModel"
-            type="by.darya_zdzitavetskaya.bstu_canteen.presentation.auth.login.LoginViewModel" />
+            type="by.darya_zdzitavetskaya.bstu_canteen.presentation.auth.password.PasswordViewModel" />
 
     </data>
 
@@ -16,33 +16,23 @@
 
         <include
             android:id="@+id/toolbar"
-            layout="@layout/toolbar"
+            layout="@layout/toolbar_with_back_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/tilEmail"
-            style="@style/TextInputLayout.Common"
+        <TextView
+            android:id="@+id/tvTip"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/base_spacing"
+            android:layout_marginTop="@dimen/base_spacing"
             android:layout_marginEnd="@dimen/base_spacing"
-            android:hint="@string/login_email_label"
-            app:endIconMode="clear_text"
-            app:layout_constraintBottom_toTopOf="@+id/tilPassword"
+            android:text="@string/password_hint"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Tooltip"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/toolbar"
-            app:layout_constraintVertical_chainStyle="packed">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/etEmail"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:singleLine="true" />
-
-        </com.google.android.material.textfield.TextInputLayout>
+            app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/tilPassword"
@@ -50,14 +40,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/base_spacing"
-            android:layout_marginTop="@dimen/small_spacing"
+            android:layout_marginTop="64dp"
             android:layout_marginEnd="@dimen/base_spacing"
-            android:hint="@string/login_password_label"
-            app:endIconMode="clear_text"
+            android:hint="@string/password_label"
+            app:endIconMode="password_toggle"
             app:layout_constraintBottom_toTopOf="@+id/btnNext"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tilEmail">
+            app:layout_constraintTop_toBottomOf="@id/tvTip"
+            app:layout_constraintVertical_bias="0.0"
+            app:layout_constraintVertical_chainStyle="packed">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/etPassword"
@@ -75,27 +67,13 @@
             android:layout_marginStart="@dimen/base_spacing"
             android:layout_marginTop="@dimen/small_spacing"
             android:layout_marginEnd="@dimen/base_spacing"
-            android:enabled="@{viewModel.isFieldsValid}"
-            android:onClick="@{() -> viewModel.login(etEmail.getText().toString(), etPassword.getText().toString())}"
+            android:enabled="@{viewModel.isPasswordValid}"
+            android:onClick="@{() -> viewModel.setPassword(etPassword.getText().toString())}"
             android:text="@string/login_next_btn_label"
-            app:layout_constraintBottom_toTopOf="@id/btnRegistration"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tilPassword" />
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btnRegistration"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/base_spacing"
-            android:layout_marginTop="@dimen/biggest_spacing"
-            android:layout_marginEnd="@dimen/base_spacing"
-            android:onClick="@{() -> viewModel.registration()}"
-            android:text="@string/login_create_account_btn_label"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/btnNext" />
+            app:layout_constraintTop_toBottomOf="@id/tilPassword" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
