--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">@android:color/white</color>
     <color name="colorPrimaryDark">@android:color/white</color>
     <color name="colorAccent">#1B5E20</color>
+
+    <color name="colorGrey">#959595</color>
+    <color name="colorBlack">#212121</color>
 </resources>
