--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
 
     <color name="colorGrey">#959595</color>
     <color name="colorBlack">#212121</color>
+    <color name="black_out">#66262222</color>
+    <color name="divider_color">#EFEFF4</color>
 </resources>
