--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="colorBlack">#212121</color>
     <color name="black_out">#66262222</color>
     <color name="divider_color">#EFEFF4</color>
+    <color name="colorLightYellow">#FFF2E4</color>
 </resources>
