added payment, logout, detail order

--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -28,6 +28,7 @@
                     android:id="@+id/rvOrders"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/base_spacing"
                     app:enableItemDividers="@{true}"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -64,6 +65,7 @@
                     android:layout_marginStart="@dimen/base_spacing"
                     android:layout_marginTop="@dimen/base_spacing"
                     android:layout_marginEnd="@dimen/base_spacing"
+                    android:onClick="@{() -> viewModel.makeOrder()}"
                     android:text="@string/cart_make_order_btn_label"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
