--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -42,44 +42,68 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/biggest_spacing"
             android:drawableEnd="@drawable/ic_more"
+            android:onClick="@{() -> viewModel.goToPass()}"
             android:paddingTop="@dimen/small_spacing"
             android:paddingBottom="@dimen/small_spacing"
             android:text="@string/profile_change_password_btn_label"
-            android:onClick="@{() -> viewModel.goToPass()}"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
-            app:layout_constraintBottom_toTopOf="@id/tvPaymentMethod"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvEmail" />
+
+        <View
+            android:id="@+id/view"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/divider_color"
+            app:layout_constraintTop_toBottomOf="@id/tvChangePassword" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvScanQrCode"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:drawableEnd="@drawable/ic_more"
+            android:onClick="@{() -> viewModel.scanQrCode()}"
             android:paddingTop="@dimen/small_spacing"
             android:paddingBottom="@dimen/small_spacing"
-            android:onClick="@{() -> viewModel.scanQrCode()}"
             android:text="@string/profile_scan_qr_code_title"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
             app:layout_constraintBottom_toTopOf="@id/tvPaymentMethod"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvChangePassword" />
+            app:layout_constraintTop_toBottomOf="@id/tvChangePassword"
+            app:visibleOrGone="@{viewModel.isAdminObservable}" />
+
+        <View
+            android:id="@+id/view2"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/divider_color"
+            android:visibility="gone"
+            app:layout_constraintTop_toBottomOf="@id/tvScanQrCode" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvPaymentMethod"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:drawableEnd="@drawable/ic_more"
+            android:onClick="@{() -> viewModel.payment()}"
             android:paddingTop="@dimen/small_spacing"
             android:paddingBottom="@dimen/small_spacing"
             android:text="@string/profile_add_payment_method_title"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
+            android:visibility="gone"
             app:layout_constraintBottom_toTopOf="@id/tvWriteToSupport"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvScanQrCode" />
+
+        <View
+            android:id="@+id/view3"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/divider_color"
+            app:layout_constraintTop_toBottomOf="@id/tvPaymentMethod" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvWriteToSupport"
@@ -93,7 +117,8 @@
             app:layout_constraintBottom_toTopOf="@id/btnLogout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvPaymentMethod" />
+            app:layout_constraintTop_toBottomOf="@id/tvPaymentMethod"
+            app:visibleOrGone="@{!viewModel.isAdminObservable}" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnLogout"
